1.1.7 (x.02.2025)

- Message's details
- Confirm box in settings that need restart
- Hungarian language
- Fixed some functions's translation
- Updated to tdesktop v5.11.2

1.1.6 (28.01.2025)

- Local tg premium
- Changed changelog link
- About text with tgd version
- Fixed FAgram icon on some platforms
- Updated to tdesktop v5.10.7

1.1.5 (05.01.2025)

— Force snow setting
— OTA updates
— Crowdin translation
— Updated to tdesktop v5.10.0

1.1.4 (08.12.2024)

— Read after action (Beta)
— Hide open webapp button in chatlist
— Updated to tdesktop v5.9.0

1.1.3 (01.12.2024)

— Using our tg api keys
— Fixed message from Telegram about "old version"

1.1.2 (29.11.2024)

— Max optimized
— Updated to Tdesktop v5.8.5

1.1.1 (24.11.2024)

— Setting use default rounding
— Auto restart while switching settings that need client restart
— Updated to tdesktop v5.8.3

1.1.0 (22.11.2024)

— Easy choose server while adding account
— Links tg://fa/restart tg://fa/quit tg://fa/update
— Created FAgram section in FAgram Preferences menu
— Update button moved to FAgram section
— Added buttons restart and quit client in FAgram section
— Limit accounts set to 999 (premium too)
— Fixed about box
— Updated to tdesktop v5.8.1

1.0.9 (12.11.2024)

— Now you can turn off debug logs
— Clean debug logs moved to Logs section
— Switch on/off debug logs with tg://fa/switch_debug_logs link
— Hide custom background in chat (beta)
— Added support German, French, Italian, Uzbek, Kazakh languages
— Now if translation not found, it use english translation but if english translation not found it use key
— Some fix with translation

1.0.8 (08.11.2024)

— Multi language for FAgram preferences
— Updated to tdesktop v5.7.2

1.0.7 (26.10.2024)

— DC Status view
— Clean Debug Logs button
— Fixed bio view in channels/chats
— Moved Update FAgram button to "Others"
— FAgram Settings renamed to FAgram Preferences
— Some specials links like tg://fa tg://nya tg://ayu now are showing random text