@@ -121,6 +121,7 @@ namespace Settings {
 		updateRecentStickersLimitLabel(::FASettings::JsonSettings::GetInt("recent_stickers_limit"));
 		SettingsMenuJsonSwitch(fa_disable_custom_chat_background, disable_custom_chat_background)
 		SettingsMenuJsonSwitch(fa_hide_open_webapp_button_chatlist, hide_open_webapp_button_chatlist)
+		SettingsMenuJsonSwitch(fa_show_discuss_button, show_discuss_button)
 		RestartSettingsMenuJsonSwitch(fa_hide_all_chats_folder, hide_all_chats_folder)
     }
 
